force-app/main/default/objects/Report_Abusive_Content__c/Report_Abusive_Content__c.object-meta.xml
<CustomObject>
    <label>Report Abusive Content</label>
    <nameField>
        <displayFormat>Report No - {0000}</displayFormat>
        <label>Report No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Abusive Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>