force-app/main/default/objects/Report_Abusive_Content__c/fields/Admin_Response__c.field-meta.xml
<CustomField>
    <fullName>Admin_Response__c</fullName>
    <label>Admin Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>