force-app/main/default/objects/Report_Abusive_Content__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Report Abusive Contents</relationshipLabel>
    <relationshipName>Report_Abusive_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>