force-app/main/default/objects/Report_Abusive_Content__c/fields/Report_Description__c.field-meta.xml
<CustomField>
    <fullName>Report_Description__c</fullName>
    <label>Report Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>