force-app/main/default/objects/Report_Abusive_Content__c/fields/Report_Reason__c.field-meta.xml
<CustomField>
    <fullName>Report_Reason__c</fullName>
    <label>Report Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inappropriate</fullName>
            </value>
            <value>
                <fullName>Offensive</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>