force-app/main/default/objects/Report_Abusive_Content__c/fields/Reported_Content__c.field-meta.xml
<CustomField>
    <fullName>Reported_Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reported Content</label>
    <referenceTo>Community_Discussion_Thread__c</referenceTo>
    <relationshipLabel>Report Abusive Contents</relationshipLabel>
    <relationshipName>Report_Abusive_Contents</relationshipName>
    <type>Lookup</type>
</CustomField>