force-app/main/default/objects/Report_Abusive_Content__c/listViews/Event_Feedback_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>Event_Feedback_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>Event Feedback Queue</label>
    <queue>Event_Feedback_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>