force-app/main/default/objects/Report_Abusive_Content__c/listViews/Feedback_Review_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>Feedback_Review_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>Feedback_Review_Queue</label>
    <queue>Feedback_Review_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>