force-app/main/default/objects/Report_Abusive_Content__c/listViews/Mentorship_Program_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>Mentorship_Program_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>Mentorship Program Queue</label>
    <queue>Mentorship_Program_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>