force-app/main/default/objects/Report_Abusive_Content__c/listViews/Moderation_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>Moderation_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>Moderation Queue</label>
    <queue>Moderation_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>