force-app/main/default/objects/Report_Abusive_Content__c/listViews/Newsletter_Subscription_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>Newsletter_Subscription_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>Newsletter Subscription Queue</label>
    <queue>Newsletter_Subscription_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>