force-app/main/default/objects/Report_Abusive_Content__c/listViews/Report_Abuse_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>Report_Abuse_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>Report Abuse Queue</label>
    <queue>Report_Abuse_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>