force-app/main/default/objects/Report_Abusive_Content__c/listViews/User_Support_Queue_Report_Abusive_Content.listView-meta.xml
<ListView>
    <fullName>User_Support_Queue_Report_Abusive_Content</fullName>
    <filterScope>Queue</filterScope>
    <label>User Support Queue</label>
    <queue>User_Support_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>